[package]
name = "prosia-extensions"
version = "0.3.0"
edition = "2024"
description = "Useful extensions for types, arrays and other helper functions for Prosia projects."
license = "MIT"
repository = "https://github.com/ProsiaLAB/prosia-extensions"

[dependencies]
ndarray = "0.17.1"
num-complex = { version = "0.4", optional = true }
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
complex = ["num-complex"]
serde = ["dep:serde"]
