[package]
name = "planetes-ext"
version = "0.2.1"
edition = "2024"
description = "Useful extensions for types, arrays and other helper functions for PlanetesLAB projects."
license = "MIT"
repository = "https://github.com/PlanetesLAB/planetes-ext"

[dependencies]
ndarray = "0.17.2"
num-complex = { version = "0.4.6", optional = true }
num-traits = "0.2.19"
serde = { version = "1.0.229", features = ["derive"], optional = true }

[features]
default = []
complex = ["num-complex"]
serde = ["dep:serde"]
